--- a/css/events/fb18-css/main.css
+++ b/css/events/fb18-css/main.css
@@ -6,6 +6,9 @@
 
 .img-full-size{
 	height: 350px;
+	position: absolute;
+	left: 600px;
+	top: 220px;
 }
 
 html,
@@ -583,10 +586,18 @@ textarea {
 	margin: auto;
 	top: 0;
 	bottom: 0;*/
-	max-width: 50%;
 }
 
-
+@media (max-width:600px) {
+	.decade .inner img{
+		max-width: 100%;
+	}
+}
+@media (min-width:600px) {
+	.decade .inner img{
+		max-width: 50%;
+	}
+}
 
 .page-footer h2{
 	font-size: 70px;
