--- a/css/events/sae-2018-css/main.css
+++ b/css/events/sae-2018-css/main.css
@@ -573,10 +573,18 @@ textarea {
 .decade .inner img{
 	position: absolute;
 	top: 0;
-	max-width: 100%;
 }
 
-
+@media (max-width:600px) {
+	.decade .inner img{
+		max-width: 100%;
+	}
+}
+@media (min-width:600px) {
+	.decade .inner img{
+		max-width: 50%;
+	}
+}
 
 .page-footer h2{
 	font-size: 70px;
