--- a/css/newswire/newswire_desktop.css
+++ b/css/newswire/newswire_desktop.css
@@ -18,6 +18,8 @@
   border-radius: .25rem;
   margin-top: 8px;
   margin-bottom: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .card>hr {
@@ -294,89 +296,63 @@
   }
 }
 
-.onimage{
-  position: absolute;
-  left:0;
-  right: 0;
-  top:0;
-  bottom: 0;
-  display: none;
-  width: 100%;
-  height: 100%;
-}
-
-.card-img-top{
-  z-index: 100;
-}
-
-.card-img-top:hover{
-  opacity: 0.2;
-}
-
-.onimage:hover{
-  display: block;
-}
-
-/* Text Overlay */
+/* Final Hover */
 .card {
   position: relative;
+  width: 50%;
 }
 
 .image {
-  opacity: 1;
   display: block;
   width: 100%;
   height: auto;
-  transition: .5s ease;
-  backface-visibility: hidden;
 }
 
-.middle {
-  transition: .5s ease;
-  opacity: 0;
+.overlay {
   position: absolute;
-  top: 20px;
-  left: 0;
-  right:0;
-  width: 100%;
-  text-align: center;
-}
-
-.fiddle {
-  transition: .5s ease;
-  opacity: 0;
-  position: absolute;
+  top: 0;
   bottom: 0;
   left: 0;
-  right:0;
+  right: 0;
+  height: 100%;
   width: 100%;
-  text-align: center;
-}
-  
-.card:hover .image {
-  opacity: 0.3;
+  opacity: 0;
+  transition: .5s ease;
+
 }
 
-.card:hover .middle {
-  opacity: 1;
-}
-
-.card:hover .fiddle {
+.card:hover .overlay {
   opacity: 1;
 }
 
 .text {
   color: white;
-  font-size: 16px;
-  padding: 16px 32px;
-  max-width: 100%;
-} 
-
-.middle .text{
-  font-family: "Batman",Arial, sans-serif;
-  background: linear-gradient(to bottom,rgb(105, 115, 164)ack,75%,rgb(0,0,0,0));
+  font-size: 20px;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -70%);
+  -ms-transform: translate(-50%, -70%);
+  transform: translate(-50%, -70%);
+  text-align: center;
 }
 
-.fiddle .text{
-  background: linear-gradient(to top,rgb(105, 115, 164),75%,rgb(0,0,0,0));
+.batman{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 25px;
+}
+
+/* Google Colors */
+.r-google{
+  background-color: #DB4437;
+}
+
+.b-google{
+  background-color: #4285F4;
+}
+.g-google{
+  background-color: #0F9D58;
+}
+.y-google{
+  background-color: #F4B400;
 }
