--- a/css/our-cars/custom_our_cars.css
+++ b/css/our-cars/custom_our_cars.css
@@ -37,9 +37,9 @@ center{
     background: linear-gradient(black,rgb(105, 115, 164));
 }
 
-body{
+body,html{
     overflow-x: hidden;
-}
+ }
 
 .bigbox{
     width: 100%;
