--- a/css/about-us/about-us-style.css
+++ b/css/about-us/about-us-style.css
@@ -99,6 +99,8 @@ p{
    
 .normal{
     font-family: 'Open Sans', sans-serif;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .parallax img{
@@ -116,8 +118,8 @@ p{
 .color-white{
     color: white;
 }
-body{
-    background: linear-gradient(to Right,#3090C7,rgb(0,0,0,0));
+body,html{
+    overflow-x: hidden;
  }
  .bg-dark{
     background-color: black;
@@ -191,7 +193,7 @@ body{
  } 
  
  .bigbox{
-    margin-top: 95px;
+    margin-top: 55px;
     margin-bottom: 50px;
 }
 }
