--- a/css/headnav/headnav.css
+++ b/css/headnav/headnav.css
@@ -3,7 +3,9 @@
   src:
   url("../../font/batman.ttf") format("truetype");
 }
-
+body,html{
+  overflow-x: hidden;
+}
 .nav li a{
   font-family: 'Open Sans', sans-serif;
   font-weight: bold;
