--- a/css/home/home-style.css
+++ b/css/home/home-style.css
@@ -3,7 +3,9 @@
   src:
   url("../../font/batman.ttf") format("truetype");
 }
-
+body,html{
+  overflow-x: hidden;
+}
 h5{
   padding: 0;
   margin: 0;
