--- a/css/laurels/laurel_css.css
+++ b/css/laurels/laurel_css.css
@@ -4,7 +4,9 @@
   src:
   url("../../font/batman.ttf") format("truetype");
 }
-
+body,html{
+  overflow-x: hidden;
+}
 /* Forward */
 .comp_name{
   font-family: "Batman",Arial, sans-serif;
@@ -27,10 +29,7 @@
     transition-property: transform;
   }
 
-  .list-group-item {
-    font-size: 20px;
-    text-decoration: bold;
-  }
+  
   .list-group-item:hover, .list-group-item:focus, .list-group-item:active {
     -webkit-transform: translateX(15px);
     transform: translateX(15px);
@@ -82,7 +81,9 @@
 
 @media only screen and (max-width: 600px) {
   /* mobile Css */
-
+  .list-group-item {
+    font-size: 15px;
+  }
   .img-fluid{
     width: 100%;
     height: auto;
@@ -95,7 +96,9 @@
   .img-fluid{
     display: none;
   }
-
+  .list-group-item {
+    font-size: 20px;
+  }
   .row{
     background-repeat: no-repeat;
     background-position: center center;
