--- a/css/newswire/newswire_desktop.css
+++ b/css/newswire/newswire_desktop.css
@@ -3,7 +3,9 @@
   src:
   url("../../font/batman.ttf") format("truetype");
 }
-
+body,html{
+  overflow-x: hidden;
+}
 .card {
   position: relative;
   display: -ms-flexbox;
