--- a/css/spoonsers/spons.css
+++ b/css/spoonsers/spons.css
@@ -3,11 +3,9 @@
   src:
   url("../../font/batman.ttf") format("truetype");
 }
-
-body{
+body,html{
   overflow-x: hidden;
 }
-
 .bigbox{
     margin-top: 50px;
     margin-bottom: 50px;
