--- a/css/home/home-style.css
+++ b/css/home/home-style.css
@@ -106,7 +106,6 @@ margin: auto;
 @media (min-width : 600px){
   /* Desktop CSS */
   .card img{
-    max-width: 80%;
     border-radius: 50%;
   }
 
@@ -149,6 +148,10 @@ margin: auto;
   .Sponser_box .card a .card-body h4{
     color: #000000;
     padding-top: 5px;
+  }
+
+  .count{
+    max-width: 40%;
   }
 }
 
@@ -200,6 +203,9 @@ margin: auto;
 /* Sponsers Card Animation Styling */
 @media (min-width : 600px){
   /* Desktop CSS */
+.spons-img{
+  max-width: 95%;
+}
 .foading{
   width: 100%;
   left: 0;
