--- a/css/home/home-style.css
+++ b/css/home/home-style.css
@@ -3,9 +3,18 @@
   src:
   url("../../font/batman.ttf") format("truetype");
 }
+
+@import url('https://fonts.googleapis.com/css?family=Belgrano|Julius+Sans+One|Kanit|Titillium+Web&display=swap');
+
 body,html{
   overflow-x: hidden;
 }
+/*
+font-family: 'Titillium Web', sans-serif;
+font-family: 'Kanit', sans-serif;
+font-family: 'Julius Sans One', sans-serif;
+font-family: 'Belgrano', serif;
+*/
 h5{
   padding: 0;
   margin: 0;
@@ -24,8 +33,12 @@ body{
   font-family: 'Open Sans', sans-serif;
 }
 
-.normal,h4,a{
+h4,a{
   font-family: 'Open Sans', sans-serif;
+}
+
+.normal{
+  font-family: 'Titillium Web', sans-serif;
 }
 
 .batman{
@@ -118,7 +131,7 @@ margin: auto;
   .fcd,.scd,.tcd{
      width: 200px;
      height: 50px;
-     transform: skew(-25deg);
+     transform: skew(-15deg);
      padding: 2.5px 0;
   }
   
@@ -217,7 +230,7 @@ width: 180px;
 height: 180px;
 box-sizing: border-box;
 border-radius: 50%;
-border-top: 10px solid #e74c3c;
+/*border-top: 10px solid #e74c3c;*/
 position: relative;
 }
 
@@ -232,12 +245,12 @@ border-radius: 50%;
 }
 
 .foading::before{
-border-top: 10px solid #e67e22;
+/*border-top: 10px solid #e67e22;*/
 transform: rotate(120deg);
 }
 
 .foading::after{
-border-top: 10px solid #3498db;
+/*border-top: 10px solid #3498db;*/
 transform: rotate(240deg);
 }
 }
