--- a/css/footer/foot_css.css
+++ b/css/footer/foot_css.css
@@ -143,11 +143,14 @@ body,html{
 .social-button img{
   width: 32px;
   height: 32px;
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
 }
 .right_foot p{
   padding: 0;
   margin-top: 0px;
 }
+
 @media only screen and (max-width: 600px) {
   .containernbs{
     display: flex;
