--- a/css/about-us/about-us-style.css
+++ b/css/about-us/about-us-style.css
@@ -1,21 +1,19 @@
-
+@import url('https://fonts.googleapis.com/css?family=Belgrano|Julius+Sans+One|Kanit|Titillium+Web&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Orbitron');
-
 
 
 @media only screen and (min-width: 950px) {
 /* Desktop CSS */
 
 .bg-dark{
-    background-color: black;
+    background-color: white;
 }
 .parallax {
     /* The image used */
     background-image: url("images/about-us/thunderblade-in-race.jpg"),linear-gradient(rgb(0,0,0,0.3),rgb(0,0,0,0.3));
   
     /* Set a specific height */
-    height: 500px;
-  
+
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
@@ -24,24 +22,30 @@
     position: relative;
 }
 
+.first-pax{
+    height: 500px;
+}
+.last-pax{
+    height: 600px;
+}
 .normal{
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Titillium Web', sans-serif;
 }
 
 .parallax img{
-    opacity: 0.35;
+    opacity: 0.85;
 }
 
 .onimage{
     padding-left: 10px;
     position: absolute;
     width:100%;
-    top: 50%;
+    top: 85%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 .color-white{
-    color: white;
+    color: black;
 }
 
 img{
@@ -98,13 +102,13 @@ p{
 @media only screen and (max-width: 600px) {
    
 .normal{
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Titillium Web', sans-serif;
     padding-left: 20px;
     padding-right: 20px;
 }
 
 .parallax img{
-    opacity: 0.35;
+    opacity: 0.85;
 }
 
 .onimage{
@@ -116,13 +120,13 @@ p{
     transform: translate(-50%, -50%);
 }
 .color-white{
-    color: white;
+    color: black;
 }
 body,html{
     overflow-x: hidden;
  }
  .bg-dark{
-    background-color: black;
+    background-color: white;
 }
 .navbar-collaps{
     display: flex;
@@ -154,7 +158,7 @@ body,html{
  }
    
  .color-white{
-     color: white;
+     color: black;
  }
  
  img{
