--- a/css/laurels/laurel_css.css
+++ b/css/laurels/laurel_css.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Orbitron');
+@import url('https://fonts.googleapis.com/css?family=Belgrano|Julius+Sans+One|Kanit|Titillium+Web&display=swap');
+
 @font-face {
   font-family: "Batman";
   src:
@@ -7,54 +9,13 @@
 body,html{
   overflow-x: hidden;
 }
+
 /* Forward */
 .comp_name{
-  font-family: "Batman",Arial, sans-serif;
+  font-family: 'Belgrano', serif;
 }
 
-.list-group-item , .list-group-item p{
-  font-family: 'Open Sans', sans-serif;
-  font-size: 18px;
-}
 
-.list-group-item {
-    display: flex;
-    vertical-align: middle;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    -webkit-transition-duration: 0.5s;
-    transition-duration: 0.3s;
-    -webkit-transition-property: transform;
-    transition-property: transform;
-  }
-
-  
-  .list-group-item:hover, .list-group-item:focus, .list-group-item:active {
-    -webkit-transform: translateX(15px);
-    transform: translateX(15px);
-    text-decoration: bold;
-    font-weight: bold;
-    color: white;
-    font-size: 23px;
-  }
-.list-group-item:nth-child(4n):hover, .list-group-item:nth-child(4n):focus, .list-group-item:nth-child(4n):active {
-    background-color: #4285F4;
-}
-  
-.list-group-item:nth-child(4n+1):hover, .list-group-item:nth-child(4n+1):focus, .list-group-item:nth-child(4n+1):active {
-    background-color: #DB4437;
-}
-  
-.list-group-item:nth-child(4n+2):hover, .list-group-item:nth-child(4n+2):focus, .list-group-item:nth-child(4n+2):active {
-    background-color: #F4B400;
-}
-  
-
-.list-group-item:nth-child(4n+3):hover, .list-group-item:nth-child(4n+3):focus, .list-group-item:nth-child(4n+3):active {
-    background-color: #0F9D58;
-}
-  
 
 .bigbox{
   margin-top: 60px;
@@ -88,7 +49,80 @@ body,html{
     width: 100%;
     height: auto;
   }
+    
+  .mp5-list-group-item{
+    position: relative;
+    display: block;
+    padding: 10px 15px;
+    margin-bottom: -1px;
+    background-color: rgba(255, 255, 255, 1);
+    color: #000;
+    border: 1px solid #ddd;
+  }
+  @media only screen and (min-width: 600px){
+  .mp5-list-group-item {
+    font-size: 20px;
+  }
+  .mp5-list-group-item{
+    display: flex;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+  }
+  .mp5-list-group-item, .mp5-list-group-item p {
+    font-family: 'Titillium Web', sans-serif;
+    font-size: 18px;
+  }
+}
 
+/* mp5-list-group-item Coverter */
+.mp5-list-group-item , .mp5-list-group-item p{
+  font-family: 'Titillium Web', sans-serif;
+  font-size: 18px;
+}
+
+.mp5-list-group-item {
+    display: flex;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+  }
+
+  
+  .mp5-list-group-item:hover, .mp5-list-group-item:focus, .mp5-list-group-item:active {
+    -webkit-transform: translateX(15px);
+    transform: translateX(15px);
+    text-decoration: bold;
+    font-weight: bold;
+    color: white;
+    font-size: 23px;
+  }
+.mp5-list-group-item:nth-child(4n):hover, .mp5-list-group-item:nth-child(4n):focus, .mp5-list-group-item:nth-child(4n):active {
+    background-color: #4285F4;
+}
+  
+.mp5-list-group-item:nth-child(4n+1):hover, .mp5-list-group-item:nth-child(4n+1):focus, .mp5-list-group-item:nth-child(4n+1):active {
+    background-color: #DB4437;
+}
+  
+.mp5-list-group-item:nth-child(4n+2):hover, .mp5-list-group-item:nth-child(4n+2):focus, .mp5-list-group-item:nth-child(4n+2):active {
+    background-color: #F4B400;
+}
+  
+
+.mp5-list-group-item:nth-child(4n+3):hover, .mp5-list-group-item:nth-child(4n+3):focus, .mp5-list-group-item:nth-child(4n+3):active {
+    background-color: #0F9D58;
+}
 }
 
 @media only screen and (min-width: 600px) {
@@ -119,7 +153,7 @@ body,html{
   }
 
   .sae18{
-    background: url("/images/laurels/Original/img3-Fireblade-4.0.jpg");
+    background: url("/images/laurels/Original/img7.jpg");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 100%;
@@ -163,4 +197,80 @@ body,html{
   .container .row:nth-child(even){
     min-height: 500px;
   }
+
+  
+.mp5-list-group-item{
+  position: relative;
+  display: block;
+  padding: 10px 15px;
+  margin-bottom: -1px;
+  background-color: rgba(255, 255, 255, 0.2);
+  color: #fff;
+  /*border: 1px solid #ddd;*/
 }
+@media only screen and (min-width: 600px){
+.mp5-list-group-item {
+  font-size: 20px;
+}
+.mp5-list-group-item{
+  display: flex;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+.mp5-list-group-item, .mp5-list-group-item p {
+  font-family: 'Titillium Web', sans-serif;
+  font-size: 18px;
+}
+}
+
+/* mp5-list-group-item Coverter */
+.mp5-list-group-item , .mp5-list-group-item p{
+  font-family: 'Titillium Web', sans-serif;
+  font-size: 18px;
+}
+
+.mp5-list-group-item {
+    display: flex;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    -webkit-transition-duration: 0.5s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+  }
+
+  
+  .mp5-list-group-item:hover, .mp5-list-group-item:focus, .mp5-list-group-item:active {
+    -webkit-transform: translateX(15px);
+    transform: translateX(15px);
+    text-decoration: bold;
+    font-weight: bold;
+    color: white;
+    font-size: 23px;
+  }
+.mp5-list-group-item:nth-child(4n):hover, .mp5-list-group-item:nth-child(4n):focus, .mp5-list-group-item:nth-child(4n):active {
+    background-color: #4285F4;
+}
+  
+.mp5-list-group-item:nth-child(4n+1):hover, .mp5-list-group-item:nth-child(4n+1):focus, .mp5-list-group-item:nth-child(4n+1):active {
+    background-color: #DB4437;
+}
+  
+.mp5-list-group-item:nth-child(4n+2):hover, .mp5-list-group-item:nth-child(4n+2):focus, .mp5-list-group-item:nth-child(4n+2):active {
+    background-color: #F4B400;
+}
+  
+
+.mp5-list-group-item:nth-child(4n+3):hover, .mp5-list-group-item:nth-child(4n+3):focus, .mp5-list-group-item:nth-child(4n+3):active {
+    background-color: #0F9D58;
+}
+}
+
