--- a/css/spoonsers/spons.css
+++ b/css/spoonsers/spons.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Belgrano|Julius+Sans+One|Kanit|Titillium+Web&display=swap');
 @font-face {
   font-family: "Batman";
   src:
@@ -18,7 +19,18 @@ body,html{
 /* Spoonsers Animation Rotate 360*/
 
   /* Align for Part 2*/
-    
+/* Desktop CSS */
+.foading{
+}    
+
+.foading img{
+  transform: all 0.5s ease;
+}
+
+
+.foading:hover img{
+  transform: scale(1.5);
+}
 @keyframes a1 {
   to{
     transform: rotate(360deg);
@@ -41,34 +53,10 @@ body,html{
     height: 180px;
     box-sizing: border-box;
     border-radius: 50%;
-    border-top: 10px solid #e74c3c;
+    /*border-top: 10px solid #e74c3c;*/
     position: relative;
   }
   
-  .foading::before,.foading::after{
-    content: '';
-    width: 180px;
-    height: 180px;
-    position: absolute;
-    left: 0;
-    box-sizing: border-box;
-    border-radius: 50%;
-  }
-  
-  .foading::before{
-    border-top: 10px solid #e67e22;
-    transform: rotate(120deg);
-  }
-  
-  .foading::after{
-    border-top: 10px solid #3498db;
-    transform: rotate(240deg);
-  }
-  /*
-  .foading img:hover{
-    animation: a1 2s linear infinite;
-  }
-*/
   .bard{
     position: absolute;
     top:0;
@@ -83,12 +71,7 @@ body,html{
     color: #fff;
     text-align: center;
   }
-/*
-.img-div:hover{
-  width: 190px;
-  height: 190px;
-}
-*/
+
 }
 
 @media (max-width: 600px){
@@ -115,7 +98,7 @@ body,html{
     height: 150px;
     box-sizing: border-box;
     border-radius: 50%;
-    border-top: 10px solid #e74c3c;
+    /*border-top: 10px solid #e74c3c;*/
     position: relative;
   }
   
@@ -130,12 +113,12 @@ body,html{
   }
   
   .foading::before{
-    border-top: 10px solid #e67e22;
+    /*border-top: 10px solid #e67e22;*/
     transform: rotate(120deg);
   }
   
   .foading::after{
-    border-top: 10px solid #3498db;
+    /*border-top: 10px solid #3498db;*/
     transform: rotate(240deg);
   }
   /*
