--- a/css/spoonsers/spons.css
+++ b/css/spoonsers/spons.css
@@ -24,12 +24,14 @@ body,html{
 }    
 
 .foading img{
-  transform: all 0.5s ease;
+  transition: all 0.5s ease;
+  filter: grayscale(100%);
 }
 
 
 .foading:hover img{
-  transform: scale(1.5);
+  transform: scale(1.2);
+  filter: grayscale(0%);
 }
 @keyframes a1 {
   to{
@@ -146,10 +148,56 @@ body,html{
   }
 
   .batman{
-    font-family: "Batman",Arial, sans-serif;
+    font-family: 'Belgrano', serif;
+  }
+
+  .kanit{
+    font-family: 'Kanit', sans-serif;
+    color: #000000;
   }
 
   .hidelink:hover{
     text-decoration: none;
   }
 
+/* Spons Card Radial Out */
+.hvr-radial-out {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  overflow: hidden;
+  background: #e1e1e1;
+  -webkit-transition-property: color;
+  transition-property: color;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+}
+.hvr-radial-out:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #2098D1;
+  border-radius: 100%;
+  -webkit-transform: scale(0);
+  transform: scale(0);
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-timing-function: ease-out;
+  transition-timing-function: ease-out;
+}
+.hvr-radial-out:hover, .hvr-radial-out:focus, .hvr-radial-out:active {
+  color: white;
+}
+.hvr-radial-out:hover:before, .hvr-radial-out:focus:before, .hvr-radial-out:active:before {
+  -webkit-transform: scale(2);
+  transform: scale(2);
+}
