--- a/css/contact-us/contact-us.css
+++ b/css/contact-us/contact-us.css
@@ -83,12 +83,10 @@ hr{
         position:absolute;
         left:48%;
         top:35%;
-        width: 128px;
-        height: 128px;
-        border-radius:20px;
-        border:1px solid #777777;
-        background:#ffffff;
-        box-shadow:0px 0px 10px #777777;
+        width: 64px;
+        height: 64px;
+        animation: a1 2s linear infinite;
+        background:rgb(0,0,0,0);
     }
     .optionbox{
         background: linear-gradient(black,rgb(0,0,0,0));
@@ -98,6 +96,7 @@ hr{
     }
 }
 @media screen and (max-width: 480px) {
+    /* Mobile View */ 
     #contact-us-form{
         max-width: 100%;
         min-width: 100%;
@@ -124,18 +123,20 @@ hr{
     #loader1 {
         position:absolute;
         left:40%;
-        top:35%;
+        top:25%;
         width: 50px;
         height: 50px;
-        border-radius:20px;
-        border-radius:20px;
+        animation: a1 2s linear infinite;
         padding:25px;
-        border:1px solid #777777;
-        background:#ffffff;
-        box-shadow:0px 0px 10px #777777;
+        background:rgb(0,0,0,0);
+        
     }
 }
-
+@keyframes a1 {
+    to{
+      transform: rotate(360deg);
+    }
+}
 
 /* OptionBox Styling */
 
